--- a/css/default.css
+++ b/css/default.css
@@ -109,6 +109,46 @@ table {
 			min-height: 770px;
 			padding: 0; 
 		}		
+
+		/* HEADINGS */
+		h1 { 
+			font-family: 'Roboto Slab', serif; 
+			font-size: 40px; letter-spacing: 2px; font-weight: bold;
+			text-shadow: 1px 1px 1px #fff, 3px 3px 0px #999;
+			margin-bottom: .45em; line-height: 1.1;
+		}
+
+		h2 {
+			font-family: 'Roboto Slab', serif; 
+			font-size: 30px; letter-spacing: 1px; font-weight: bold;
+			text-shadow: 1px 1px 1px #fff, 3px 3px 0px #999;
+			margin: .75em 0 .15em 0; line-height: 1;
+		}
+
+		/* FONT STYLES */
+		/* 	make paragraphs that are not last have a bottom margin, adapted from
+				https://stackoverflow.com/questions/36321736/manage-margins-so-that-the-last-elements-have-no-margins	*/
+		p:not(:last-child) { margin-bottom:1em; }
+		b { font-weight: bold; }
+		i { font-style: oblique; }
+
+		/* LINKS */
+		a:link, a:visited, a:hover, a:active { color: blue; }
+		a.grey:link, a.grey:visited, a.grey:hover, a.grey:active { color: grey; }
+		a.black:link, a.black:visited, a.black:hover, 
+		a.black:active { color: black; }
+		
+		hr {
+			clear: both;
+			border-style: none;			
+			height: 0;
+			border-top: 5px solid #fff;
+			margin: 20px 0 5px 0;
+		}
+
+		ol { list-style: decimal; margin-left: 1.25em; line-height: 1.5; }
+			li { margin-bottom: 10px; }
+		ul { list-style: disc; margin-left: 1em; }		
 		
 /* 	=========================================
 		MOBILE AND NARROW DEVICES
@@ -120,7 +160,9 @@ table {
 	
 		main { padding: 0; }
 		section { width: 100%; }
-		main section { border: none; }
+		main section { 
+			padding: 1em;
+		}
 	
 }
 
