--- a/css/default.css
+++ b/css/default.css
@@ -67,7 +67,6 @@ table {
 		========================================= */
 
 		html, body {
-			background-color: #1c567e;
 			font-family: Verdana, Geneva, sans-serif;
 			font-size: 16px;
 			height: 100%;
@@ -76,7 +75,6 @@ table {
 		}
 				
 		main { 
-			background-color: #ccc;
 			padding: 1.5em 0;  
 		}
 		
@@ -88,8 +86,7 @@ table {
 			width: 1200px;
 		}
 
-		main section {
-			background-color: #fff;						
+		main section {			
 			border: 1.5em solid transparent;
 			box-sizing: border-box;
 			clear: both;
@@ -100,12 +97,10 @@ table {
 
 		
 		header { 
-			background-color: #1c567e; 
 			padding: 2em 0 2.5em 0;
 		}
 		
 		footer { 
-			background-color: #1c567e;
 			min-height: 770px;
 			padding: 0; 
 		}		
@@ -134,9 +129,6 @@ table {
 
 		/* LINKS */
 		a:link, a:visited, a:hover, a:active { color: blue; }
-		a.grey:link, a.grey:visited, a.grey:hover, a.grey:active { color: grey; }
-		a.black:link, a.black:visited, a.black:hover, 
-		a.black:active { color: black; }
 		
 		hr {
 			clear: both;
@@ -149,6 +141,95 @@ table {
 		ol { list-style: decimal; margin-left: 1.25em; line-height: 1.5; }
 			li { margin-bottom: 10px; }
 		ul { list-style: disc; margin-left: 1em; }		
+
+
+/* 	=========================================
+		FONT SIZING
+		========================================= */
+		
+		/* font sizing  */
+		.tiny 	{ font-size: 72%; }
+		.small 	{ font-size: 90%; }
+		.normal { font-size: 100%; }
+		.big 		{ font-size: 120%; letter-spacing: 1px; }
+		.huge 	{ font-size: 150%; letter-spacing: 1px; }
+
+/* 	=========================================
+		COLORS
+		========================================= */
+
+		html, body, 
+		header,
+		footer 				{ background-color: #1c567e; } 	/* the document */	
+		main					{ background-color: #ccc; }			/* behind the page */
+		main section 	{ background-color: #fff; }			/* the "page" */
+		
+		div.blue 		{	background-color: #89cff0; }
+		div.green 	{	background-color: #a5d6a7; }
+		div.grey 		{	background-color: #ccc; }
+		div.pink 		{	background-color: pink; }
+		div.yellow 	{	background-color: #ffe699; }
+
+		/* TAGS */
+		div.tag {
+			padding: 0 4px;
+			background-color: #ddd;
+			display: inline-block;
+			margin: 0 0 2px 2px;
+		}
+		
+		div.tag.blue 		{ background-color: #89cff0; }
+		div.tag.green 	{ background-color: #a5d6a7; }
+		div.tag.grey 		{ background-color: #ccc; }
+		div.tag.pink 		{ background-color: pink; }
+		div.tag.yellow 	{ background-color: #ffe699; }		
+
+/* 	=========================================
+		FOOTER
+		========================================= */
+
+		footer h3 {
+			font-family: 'Roboto Slab', serif; 
+			font-weight: bold;
+		}
+
+		footer a:link, footer a:visited, footer a:hover, footer a:active { color: #000; }
+
+
+		footer .grid { 
+    	column-gap: 1.5em;
+			display: grid;
+			grid-template-columns: 1fr 1fr; 
+			margin: .25em 1em 1.5em 0;
+		}
+
+		footer .grid .medium {
+			background-color: #999;
+			min-height: 95px;
+			padding: 10px 0 0 100px;
+			line-height: 1.3;
+			background-image: url('../images/footer_sprite.png');
+			background-repeat: no-repeat;
+			background-size: 90px;
+			background-position: 0 8px;
+		} 
+		
+		footer .contact {
+			text-align: center;
+			font-size: 200%;
+			line-height: 1.5;
+			padding: 0 5px;
+		}
+
+				footer .contact .material-icons {
+					font-size: 120%;
+					position: relative;
+					left: -1px; top: 8px; 
+				}
+				
+				footer .contact .material-icons.phone { 
+					rotate: 22deg; left: 5px; 
+				}
 		
 /* 	=========================================
 		MOBILE AND NARROW DEVICES
@@ -163,6 +244,15 @@ table {
 		main section { 
 			padding: 1em;
 		}
-	
+
+
+		footer .grid { 
+			grid-template-columns: 1fr;
+			margin: 0 .5em 1em .5em;
+		}
+		
+		footer .grid .medium {
+			min-height: 95px;
+		}	
 }
 
