--- a/css/default.css
+++ b/css/default.css
@@ -112,14 +112,14 @@ table {
 		
 		h1 { 
 			font-family: 'Roboto Slab', serif; 
-			font-size: 40px; letter-spacing: 2px; font-weight: bold;
+			font-size: 60px; letter-spacing: 2px; font-weight: bold;
 			text-shadow: 1px 1px 1px #fff, 3px 3px 0px #999;
 			margin: 0 0 20px 0;
 		}
 
 		h2 {
 			font-family: 'Roboto Slab', serif; 
-			font-size: 30px; letter-spacing: 1px; font-weight: bold;
+			font-size: 40px; letter-spacing: 1px; font-weight: bold;
 			text-shadow: 1px 1px 1px #fff, 3px 3px 0px #999;
 			margin: 0 0 10px 0;
 		}
@@ -134,6 +134,9 @@ table {
 		h1.tight, h2.tight, h3.tight {
 			margin-bottom: 0;
 		}
+		
+		pre { -moz-tab-size: 2; }
+		pre { tab-size: 2; }
 
 		/* FONT STYLES */
 		/* 	make paragraphs that are not last have a bottom margin, adapted from
@@ -157,7 +160,12 @@ table {
 			li { margin-bottom: 10px; }
 		ul { list-style: disc; margin-left: 1em; }		
 
-
+/* 	=========================================
+		GENERAL SPECIAL CLASSES
+		========================================= */
+		.note			{ font-size: 82%; line-height: 1.1; font-style:oblique;  }
+		.desktop  {}
+		.mobile		{ display: none; }
 /* 	=========================================
 		GENERAL FONT SIZING AND STYLING
 		========================================= */
@@ -170,8 +178,6 @@ table {
 		.huge 		{ font-size: 150%; letter-spacing: 1px; }
 
 		/* font styling  */
-		.note			{ font-size: 82%; line-height: 1.1; font-style:oblique;  }
-
 		.oswald 	{ font-family: 'Oswald', sans-serif;  }
 		.verdana 	{ font-family: Verdana, Geneva, sans-serif; }
 		.roboto 	{ font-family: 'Roboto Slab', serif;  }	
@@ -204,9 +210,22 @@ table {
 			padding: 0px 0.05em 0px 0px;
 		}
 		
-		
-		
-		
+		/* STICKIES */
+		div.sticky {
+			position: absolute;
+			padding: .5em;
+			box-sizing: border-box;
+			background-color: #ffd700;
+			margin-bottom: 10px;
+			border: 3px solid #ffbf00;
+			box-shadow: 2px 2px 7px black;
+			line-height: 1.2;
+			cursor: pointer;	
+			max-width: 50%;	
+			/* display: none; */
+		}		
+								.bottom_right { right: 10px; bottom: 5px; }
+								.top_right { right: 10px; top: 30px; }
 		
 		/* PANELS */
 		div.panel { 
@@ -229,6 +248,76 @@ table {
 		div.panel div.closed { padding: 3em 2em 3em 2em; line-height: 2; }
 		div.panel div.interior { padding: 3em 2em 3em 2em; } 
 		
+		
+		
+		
+		/* GRIDS and BOXES */
+		.grid_1 { grid-template-columns: 1fr; }		
+		.grid_2 { grid-template-columns: 1fr 1fr; }
+		.grid_3 { grid-template-columns: 1fr 1fr 1fr; }
+
+		.grid_1, .grid_2, .grid_3 {
+    	display: grid;
+    	column-gap: 1.5em;
+    	margin-bottom: 1.5em;
+		}		
+
+		.box {
+			padding: 0;
+			position: relative;
+			background-color: #ccc;
+			min-height: 180px;			/* WILLFIX: good height? */
+			box-sizing: border-box;
+		}
+								/* "featured" grid styles */
+								div.featured .box { padding: 1em; position: relative; } 
+								div.featured h3 { margin-bottom: 7px; }		
+								div.featured  span.material-icons {
+									position: absolute; right: 8px; top: 6px;					
+									font-size: 200%;
+								}
+									
+		/* start of aside ( with an image, or a quote ) */	
+		aside {
+			width: 50%; 
+			padding: 0; margin: 0 0 1.5em 1.5em;
+			float: right;
+			box-sizing: border-box;
+			line-height: 0;
+		}
+		
+					aside img { width: 100%; }
+					
+					aside div { 
+						line-height: 1.2;
+						padding: 8px 10px 12px 15px;
+					}
+					
+					aside div:not(:first-child) {
+						background-color: #ddd;			
+					}
+
+					aside.quote div:not(:first-child) {
+						background-color: transparent;		
+						text-align: right;	
+					}
+
+					blockquote {
+						line-height: 1.1;
+						background-color: #fff;
+						padding: 30px 50px;
+						font-size: 200%;
+						position: relative;
+					}
+					blockquote p.dropcap::first-letter { font-size: 300%; 
+						margin-top: 1px; }
+					
+					span.l_quote, span.r_quote { font-size: 100px; line-height: 0; }
+					span.l_quote { position: absolute; left: 5px; top: 46px; }
+					span.r_quote { position: absolute; right: 50px; bottom: 37px; }
+					/* end of asides and blockquotes */					
+								
+								
 		/* BUTTONS ( used in PANELS ) */
 		button {
 			margin-top: 10px;
@@ -382,6 +471,11 @@ table {
 
 
 
+
+
+
+
+
 /* 	=========================================
 		MOBILE AND NARROW DEVICES
 		========================================= */
@@ -396,7 +490,7 @@ table {
 		main section { padding: 0; border: none; }
 
 	/* MOBILE HEADING TWEAKS */
-	h1 { 	font-size: 13vw; letter-spacing: .2vw; }
+	h1 { 	font-size: 50px; letter-spacing: .2vw; }
 	h2 { 	font-size: 30px; letter-spacing: normal; 
 				text-shadow: 1px 1px 1px #fff, 2px 2px 0px #999;
 	}	
@@ -408,7 +502,52 @@ table {
 	div.panel div.interior { padding: 2em 0.8em 3em 0.8em; position: relative; }
 	div.panel:not(:first-child) div.interior { padding-top: 2em; }
 	
+	/* MOBILE GRID AND BOX TWEAKS */
+	.grid_1, .grid_2, .grid_3  { display: block; margin: 0; }
+	div.box { margin-bottom: 1em; padding: .75em; }
+	
+	/* MOBILE SPECIAL CLASSES */
+		.desktop  { display: none; }
+		.mobile		{ display: block; }
+		span.mobile		{ display: inline-block; }		
+		span.rel { position: relative !important; }
+		.abs { position: absolute; }
+		
 
+	/* MOBILE STICKIES */
+	div.sticky { max-width: 45%; }
+			.bottom_right { right: 25px; }	
+			.top_right { top: 16px; right: 25px; }	
+
+
+
+	/* START OF MOBILE ASIDE STYLES */
+	aside {
+		width: 100%;
+		padding: 0;
+		margin: 0 0 2.5em 0;
+		float: none;
+	}	
+	
+					blockquote {
+						line-height: 1.1;
+						background-color: #fff;
+						padding: 30px 20px;
+						font-size: 130%;
+						position: relative;
+					}
+					blockquote p.dropcap::first-letter { font-size: 70px; 
+						margin-top: -10px; }
+					
+					span.l_quote, span.r_quote { font-size: 60px; line-height: 0; }
+					span.l_quote { position: absolute; left: 5px; top: 50px; }
+					span.r_quote { position: absolute; right: 5px; bottom: 37px; }
+					/* END OF MOBILE ASIDE STYLES */
+					
+					
+					
+					
+					
 									/* CUSTOM FOOTER */
 									footer .grid { 
 										grid-template-columns: 1fr;
